--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,9 @@
 {
   "presets": [
-      "@babel/preset-env"
+    ["@babel/preset-env",
+      {
+        "useBuiltIns": "entry"
+      }
+    ] 
   ]
 }
