--- a/package.json
+++ b/package.json
@@ -46,7 +46,6 @@
     "webpack-dev-server": "^3.3.1"
   },
   "dependencies": {
-    "canvas-loop": "^1.0.7",
     "color-alpha": "^1.0.2",
     "color-rgba": "^1.1.0",
     "fabric": "^2.7.0",
@@ -55,6 +54,7 @@
     "just-pick": "^1.0.3",
     "just-range": "^1.0.0",
     "mouse-wheel": "^1.2.0",
+    "raf": "^3.4.1",
     "touch-pinch": "^1.0.1"
   }
 }
