--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,7 @@
 {
   "presets": [
-    ["@babel/preset-env",
-      {
-        "useBuiltIns": "entry"
-      }
-    ] 
+    [
+      "@babel/preset-env"
+    ]
   ]
 }
