--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
   },
   "dependencies": {
     "eventemitter2": "^5.0.1",
-    "fabric": "^3.1.0"
+    "fabric-pure-browser": "^3.4.0"
   },
   "nyc": {
     "sourceMap": false,
